<:pencil2:> addition of favicon. <:wrench:> removal of firts model composition. Fixture on wrap feature of the section 'places' in order to compile with responsiveness. Fixture on hoverable items of the filters section to better align them on mobile version. Minimal version of black and white colors on CSS parameters

--- a/css/style_reservia.css
+++ b/css/style_reservia.css
@@ -53,7 +53,6 @@ header{
   grid-template-columns: repeat(5, 1fr);
   grid-template-areas: "logo . . nav inscription";
   justify-content: center;
-  width: 100%;
 }
 
 header img{
@@ -115,7 +114,6 @@ body section{
   display: flex;
   flex-direction: column;
   margin: 1em 0;
-  width: 100%;
 }
 
 /* Search bar */
@@ -149,7 +147,7 @@ body section{
   border: 0.1em solid #0065FC;
   border-bottom-right-radius: 1em;
   border-top-right-radius: 1em;
-  color: #FFFFFF;
+  color: #FFF;
   display: flex;
   font-weight: normal;
   padding: 1em;
@@ -177,8 +175,10 @@ body section{
 
 /* Filter buttons */
 #filter-options a{
-  padding: 1em 0em 1em 0em;
-  margin: 1em;
+  border: 0.1em solid #F2F2F2;
+  border-radius: 2em;
+  padding: 0.6em 0em;
+  margin: 1.5em;
 }
 
 .icon{
@@ -186,30 +186,28 @@ body section{
   border: 0.1em solid #DEEBFF;
   border-radius: 50%;
   color: #0065FC;
-  left: 2.3em;
+  left: -0.2em;
   padding: 0.6em;
   position: relative;
 }
 
 .filter-button{
-  border: 0.1em solid #F2F2F2;
-  border-radius: 2em;
-  color: #000000;
+  color: #000;
   font-size: 1em;
   font-weight: normal;
-  padding: 0.6em 1em 0.6em 2em;
+  padding-right: 1.5em;
   text-decoration: none;
 }
 
-#filter-options a:hover .filter-button{
+#filter-options a:hover{
   background-color: #0065FC;
   border: 0.1em solid transparent;
-  border-radius: 2em;
   color: #FFF;
-  font-size: 1em;
-  font-weight: normal;
-  padding: 0.6em 1em 0.6em 2em;
-  text-decoration: none;
+  transition: 700ms ease;
+}
+
+#filter-options a:hover .filter-button{
+  color: #FFF;
   transition: 700ms ease;
 }
 
@@ -217,8 +215,8 @@ body section{
   background-color: #F2F2F2;
   border: 0.1em solid #F2F2F2;
   border-radius: 50%;
-  color: #000000;
-  left: 2.3em;
+  color: #000;
+  left: -0.2em;
   padding: 0.6em;
   position: relative;
   transition: 700ms ease;
@@ -271,7 +269,7 @@ aside > a > div{
   align-items: stretch;
   background-color: #FFF;
   border-radius: 1.5em;
-  box-shadow: 0em 0em 1em #e9e9e9;
+  box-shadow: 0em 0em 1em #E9E9E9;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -329,19 +327,20 @@ aside > a > div > img{
 #places > div{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0.5em 0;
 }
 
 #places > div > a, aside > a{
-  color: #000000;
+  color: #000;
   text-decoration: none;
 }
 
 #places > div > a > div{
-  background-color: #FFFFFF;
+  background-color: #FFF;
   border-radius: 1.5em;
-  box-shadow: 0em 0em 1em #e9e9e9;
+  box-shadow: 0em 0em 1em #E9E9E9;
   display: flex;
   flex-direction: column;
   padding: 0.4em;
@@ -370,7 +369,7 @@ aside > a > div > img{
 }
 
 .empty-star{
-  color: #b1b1b1;
+  color: #B1B1B1;
 }
 
 /* Activities */
@@ -433,7 +432,7 @@ aside > a > div > img{
 .activity-card{
   background-color: #FFF;
   border-radius: 1em;
-  box-shadow: 0em 0em 1em #e9e9e9;
+  box-shadow: 0em 0em 1em #E9E9E9;
   width: 100%;
 }
 
@@ -485,7 +484,7 @@ footer div{
 
 
 /****** TABLETTE STYLE ******/
-@media screen and (max-width: 1030px){
+@media screen and (max-width: 991.9px){
   header{
     padding: 0 1.5em;
   }
@@ -513,7 +512,7 @@ footer div{
 }
 
 /****** MOBILE STYLE ******/
-@media screen and (max-width: 768px){
+@media screen and (max-width: 767.9px){
 
   /****** Header mobile *****/
   header{
@@ -564,7 +563,7 @@ footer div{
   }
   
   .nav-btn2:hover{
-    border-bottom: solid 0.2em #000000;
+    border-bottom: solid 0.2em #000;
     border-top: none;
     padding-bottom: 2em;
     width: auto;
@@ -592,6 +591,7 @@ footer div{
 
   .search-text{
     display: none;
+    overflow: hidden;
     visibility: hidden;
   }
 
@@ -609,27 +609,7 @@ footer div{
   }
 
   #filter-options a{
-    margin: 0;
-  }
-
-  .icon{
-    left: 0.2;
-    padding: 0.6em;
-  }
-  
-  .filter-button{
-    padding: 0.6em 1em 0.6em 2.5em;
-    margin: 0;
-  }
-  
-  #filter-options a:hover .filter-button{
-    padding: 0.6em 1em 0.6em 2.5em;
-    margin: 0;
-  }
-  
-  #filter-options a:hover .icon{
-    left: 0.2;
-    padding: 0.6em;
+    margin: 1em 1em 1em 0;
   }
 
   /***** MAIN CONTENT *****/
